--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,295 @@
-.App {
+/* Color scheme for app: https://colorhunt.co/palette/42191 */
+@import url("https://fonts.googleapis.com/css2?family=Teko:wght@300;400;500&display=swap");
+
+/* ------------Common Styles------------ */
+* {
+  vertical-align: baseline;
+  font-weight: inherit;
+  font-family: "Teko", sans-serif;
+  font-style: inherit;
+  font-size: 100%;
+  border: 0;
+  outline: 0;
+  padding: 0;
+  margin: 0;
+}
+
+body {
+  background-color: #e3fdfd;
+}
+
+h1 + p {
+  font-size: 1.5rem;
+  letter-spacing: 1px;
+  margin-bottom: 0.3rem;
+}
+
+.center {
   text-align: center;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.page-wrapper {
+  height: 100vh;
+  text-align: center;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.page-title {
+  text-align: center;
+  color: #71c9ce;
+  font-size: 3.5rem;
+  font-weight: 500;
+  padding: 0.2rem 0;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.form-control {
+  text-align: center;
+  background-color: #fff;
+  color: #000;
+  width: 40%;
+  height: auto;
+  margin: 7em auto;
+  border-radius: 1.5rem;
+  box-shadow: 0px 11px 35px 2px rgba(0, 0, 0, 0.14);
+  padding: 1.3rem 0;
+}
+
+.form-control input {
+  width: 76%;
+  color: #000;
+  font-weight: 500;
+  font-size: 1rem;
+  letter-spacing: 1px;
+  background: rgba(136, 126, 126, 0.04);
+  padding: 10px 20px;
+  border-radius: 20px;
+  outline: none;
+  box-sizing: border-box;
+  border: 2px solid rgba(0, 0, 0, 0.02);
+  text-align: center;
+}
+
+.form-control button {
+  cursor: pointer;
+  border-radius: 5em;
+  color: #fff;
+  background: linear-gradient(to right, #71c9ce, #e3fdfd);
+  border: 1px solid #71c9ce;
+  padding: 0.3rem 3rem;
+  font-size: 1.5rem;
+  box-shadow: 0 0 20px 1px rgba(0, 0, 0, 0.04);
+  margin: 1rem 0;
+  width: 45%;
+}
+
+.form-control select {
+  border: 2px solid #71c6ce;
+  border-radius: 10px;
+  font-size: 1.2rem;
+  margin-bottom: 1rem;
+}
+
+.form-control textarea {
+  font-size: 1.3rem;
+  border: 3px solid #71c6ce;
+  border-radius: 5px;
+  padding: 0.3rem;
+  width: 75%;
+}
+
+.form-control label {
+  font-size: 1.5rem;
+}
+
+.list-container {
+  background-color: #fff;
+  list-style: none;
+  width: 55%;
+  height: 60vh;
+  overflow: scroll;
+  position: relative;
+  left: 23%;
+  border-radius: 20px;
+}
+
+.list-container li {
+  padding: 0.5rem 0;
+}
+
+.list-container li a {
+  font-size: 1.8rem;
+  font-weight: 500;
+  text-decoration: none;
+  color: #71c9ce;
+}
+
+.back-button {
+  cursor: pointer;
+  border-radius: 5rem;
+  color: #fff;
+  background: #71c9ce;
+  padding: 0.2rem 1.2rem;
+  font-size: 1.5rem;
+  box-shadow: 0 0 20px 1px rgba(0, 0, 0, 0.04);
+  margin: 0.5rem 0;
+  width: 45%;
+  text-decoration: none;
+}
+
+.add-button {
+  cursor: pointer;
+  border-radius: 5rem;
+  color: #fff;
+  background: #73d1b2;
+  padding: 0.2rem 2rem;
+  font-size: 1.5rem;
+  box-shadow: 0 0 20px 1px rgba(0, 0, 0, 0.04);
+  width: 45%;
+  text-decoration: none;
+}
+
+.edit-button {
+  background: linear-gradient(to bottom, #ffa200 5%, #ffc694 100%);
+  background-color: #ffa200;
+  border-radius: 10px;
+  border: 1px solid #cc6900;
+  display: inline-block;
+  cursor: pointer;
+  color: #fff;
+  font-size: 1rem;
+  font-weight: 500;
+  letter-spacing: 1px;
+  padding: 0.1rem 0.6rem;
+  text-decoration: none;
+  text-transform: uppercase;
+  margin: 0 0.2rem;
+}
+
+.delete-button {
+  background: linear-gradient(to bottom, #fe1a00 5%, #ce0100 100%);
+  background-color: #fe1a00;
+  border-radius: 10px;
+  border: 1px solid #d83526;
+  display: inline-block;
+  cursor: pointer;
+  color: #fff;
+  font-size: 1rem;
+  font-weight: 500;
+  letter-spacing: 1px;
+  padding: 0.1rem 0.6rem;
+  text-decoration: none;
+  text-transform: uppercase;
+  margin: 0 0.2rem;
+}
+
+.danger-box {
+  position: absolute;
+  left: 50%;
+  top: 80%;
+  transform: translate(-50%, -50%);
+  padding: 1rem;
+  text-align: center;
+  border: 3px solid red;
+  width: 20%;
+}
+
+.danger-box h2 {
+  font-size: 3rem;
+  color: red;
+}
+
+hr {
+  border-top: 2px solid #a6e3e9;
+}
+
+/* ------------Dashboard------------ */
+.card-container {
+  text-align: center;
+  position: absolute;
+  left: 25%;
   display: flex;
   flex-direction: column;
-  align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  width: 60%;
 }
 
-.App-link {
-  color: #61dafb;
+.card {
+  text-align: center;
+  background-color: #fff;
+  border-radius: 10px;
+  height: auto;
+  position: relative;
+  left: 25%;
+  width: 45%;
+  margin: 1rem;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.card h3 {
+  text-align: center;
+  font-size: 2.5rem;
+  color: #000;
+}
+
+.card img {
+  max-width: 100%;
+  height: auto;
+}
+
+.chart-link {
+  position: relative;
+  width: 100%;
+}
+
+/* ------------Profile Page------------ */
+.profile-page p {
+  font-size: 1.5rem;
+}
+
+.profile-page h3 {
+  color: #71c9ce;
+}
+
+.fa-user-secret {
+  font-size: 6rem;
+}
+
+/* ------------Project/Ticket Detail Page------------ */
+.project-detail h2 {
+  color: #71c9ce;
+  font-size: 2.2rem;
+  font-weight: 500;
+  margin-top: 0.4rem;
+}
+
+.project-detail ul {
+  background-color: #fff;
+  list-style: none;
+  width: 60%;
+  height: 25vh;
+  overflow: scroll;
+  position: relative;
+  left: 23%;
+  border-radius: 20px;
+}
+
+.project-detail ul li {
+  padding: 0.5rem 0;
+}
+
+.project-detail ul li a {
+  font-size: 1.8rem;
+  font-weight: 500;
+  text-decoration: none;
+  color: #71c9ce;
+}
+
+/* My Projects/My Tickets Page */
+.shift {
+  position: absolute;
+  top: 20%;
+}
+
+.shift-title {
+  position: absolute;
+  top: 6%;
+  left: 45%;
 }
